Extract: properly generate multiple-type cases